# python-stdnum

./: .gitignore  .travis.yml  CONTRIBUTING.md  ChangeLog  MANIFEST.in  NEWS  README  README.md  fetch-test.py  getcnloc.py  getdowhitelists.py  getiban.py  getimsi.py  getisbn.py  getisil.py  getmybp.py  getnace.py  getnumlist.py  index.py  mypy.ini  setup.cfg  setup.py  tox.ini
debian/: changelog  control  copyright  watch
docs/: changes.rst  conf.py  index.rst  stdnum.ad.nrt.rst  stdnum.al.nipt.rst  stdnum.ar.cbu.rst  stdnum.ar.cuit.rst  stdnum.ar.dni.rst  stdnum.at.businessid.rst  stdnum.at.postleitzahl.rst  stdnum.at.tin.rst  stdnum.at.uid.rst  stdnum.at.vnr.rst  stdnum.au.abn.rst  stdnum.au.acn.rst  stdnum.au.tfn.rst  stdnum.az.voen.rst  stdnum.be.bis.rst  stdnum.be.eid.rst  stdnum.be.iban.rst  stdnum.be.nn.rst  stdnum.be.ogm_vcs.rst  stdnum.be.ssn.rst  stdnum.be.vat.rst  stdnum.bg.egn.rst  stdnum.bg.pnf.rst  stdnum.bg.vat.rst  stdnum.bic.rst  stdnum.bitcoin.rst  stdnum.br.cnpj.rst  stdnum.br.cpf.rst  stdnum.by.unp.rst  stdnum.ca.bc_phn.rst  stdnum.ca.bn.rst  stdnum.ca.sin.rst  stdnum.casrn.rst  stdnum.cfi.rst  stdnum.ch.esr.rst  stdnum.ch.ssn.rst  stdnum.ch.uid.rst  (+215 more)
online_check/: README  README.md  check.js  stdnum.wsgi  template.html
scripts/: check_headers.py  check_license_headers.py
stdnum/: __init__.py  _types.py  _typing.py  at_02.py  bic.py  bitcoin.py  bsn.py  cas.py  casrn.py  cfi.py  cusip.py  damm.py  ean.py  exceptions.py  figi.py  grid.py  gs1_128.py  iban.py  imei.py  imo.py  imsi.py  isan.py  isbn.py  isil.py  isin.py  ismn.py  isni.py  iso11649.py  iso6346.py  iso9362.py  isrc.py  issn.py  lei.py  luhn.py  mac.py  meid.py  numdb.py  upi.py  util.py  vatin.py  (+1 more)
tests/: cn_ssn_test.py  no_ssn_test.py  se_ssn_test.py  test_ad_nrt.doctest  test_al_nipt.doctest  test_ao_nif.doctest  test_ar_cbu.doctest  test_ar_cuit.doctest  test_at_strnr.py  test_at_tin.doctest  test_au_abn.doctest  test_au_acn.doctest  test_au_tfn.doctest  test_az_voen.doctest  test_bd_etin.doctest  test_be_bis.doctest  test_be_iban.doctest  test_be_nn.doctest  test_be_ssn.doctest  test_be_vat.doctest  test_bf_ifu.doctest  test_bg_egn.doctest  test_bg_vat.doctest  test_bic.doctest  test_bitcoin.doctest  test_bj_ifu.doctest  (+187 more)
(+403 files in other folders)
