[metadata]
license_file = COPYING

[sdist]
owner=root
group=root

[bdist_wheel]
universal=1

[nosetests]
with-doctest=true
doctest-extension=doctest
doctest-options=+IGNORE_EXCEPTION_DETAIL,+NORMALIZE_WHITESPACE
with-coverage=true
cover-branches=true
cover-package=stdnum
cover-inclusive=true
cover-erase=true
cover-html=true
cover-html-dir=coverage
cover-min-percentage=100

[coverage:report]
fail_under=100
show_missing=true

[build_sphinx]
all_files  = 1

[flake8]
ignore =
  D205,D209,D400  # our docstrings are multi-line blobs
  D302  # We don't care about Unicode docstrings
  E501  # ignore long lines
  E731  # we occasionally use lambda
  F403,F405  # we use * imports
  Q001  # we use '''...''' multi-line strings
  Q003  # don't force "" strings to avoid escaping quotes
  T001  # we use print statements in the update scripts
  W504  # we put the binary operator on the preceding line
max-complexity = 15
max-line-length = 120

[isort]
lines_after_imports = 2
multi_line_output = 4
known_third_party =
  lxml
  requests
  xlrd
