[metadata]
license_files = COPYING

[sdist]
owner=root
group=root

[tool:pytest]
addopts = --doctest-modules --doctest-glob="*.doctest" stdnum tests --ignore=stdnum/iso9362.py --cov=stdnum --cov-report=term-missing:skip-covered --cov-report=html
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL

[coverage:run]
branch = true

[coverage:report]
fail_under=100
show_missing=true

[coverage:html]
directory = coverage

[build_sphinx]
all_files  = 1

[flake8]
ignore =
  D205,D209,D400  # our docstrings are multi-line blobs
  D302  # We don't care about Unicode docstrings
  E731  # we occasionally use lambda
  F403,F405  # we use * imports
  Q001  # we use '''...''' multi-line strings
  Q003  # don't force "" strings to avoid escaping quotes
  T001,T201  # we use print statements in the update scripts
  W504  # we put the binary operator on the preceding line
max-complexity = 15
max-line-length = 120
extend-exclude =
  .github
  .pytest_cache
  build

[isort]
lines_after_imports = 2
multi_line_output = 4
known_third_party =
  lxml
  openpyxl
  requests
  xlrd
